# 24-synchrotron-beam-optics

./: CMakeLists.txt  README.md  test_thermal.py
python/synchrotron/: __init__.py  core.py
src/: bindings.cpp
src/core/: bragg_solver.cpp  bragg_solver.h  crystal_geometry.cpp  crystal_geometry.h  fp_control.h  hdf5_writer.cpp  hdf5_writer.h  photon_transport.cpp  photon_transport.h  physics_constants.cpp  physics_constants.h  thermal_solver.cpp  thermal_solver.h
src/mpi/: mpi_scheduler.cpp  mpi_scheduler.h
